newtc/src/featurez/syntax/snapshots/tests__higher_precedence_is_evaluated_first.snap
---
created: "2019-09-13T23:44:32.642532Z"
creator: insta@0.8.1
source: newtc/src/featurez/syntax/tests.rs
expression: approval_document
---
====text====
============
1+2*3
====tokens====
============
[
    IntegerLiteral[1],
    Plus[1],
    IntegerLiteral[1],
    Star[1],
    IntegerLiteral[1],
    EndOfFile[0]
]====events====
============
[
    BeginNode {
        kind: LiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: Some(
            3
        )
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    BeginNode {
        kind: BinaryExpr,
        is_forward_parent: true,
        forward_parent_offset: None
    },
    Token {
        kind: Plus,
        length: 1
    },
    BeginNode {
        kind: LiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: Some(
            3
        )
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    BeginNode {
        kind: BinaryExpr,
        is_forward_parent: true,
        forward_parent_offset: None
    },
    Token {
        kind: Star,
        length: 1
    },
    BeginNode {
        kind: LiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: None
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    EndNode,
    EndNode
]====tree====
============
┗ BinaryExpr
  ┠ LiteralExpr
  ┃ ┗ IntegerLiteral "1"
  ┠ Plus "+"
  ┗ BinaryExpr
    ┠ LiteralExpr
    ┃ ┗ IntegerLiteral "2"
    ┠ Star "*"
    ┗ LiteralExpr
      ┗ IntegerLiteral "3"

