newtc/src/featurez/syntax/snapshots/tests__left_associativity_is_deeply_nested.snap
---
created: "2019-11-27T15:12:55.009288Z"
creator: insta@0.8.1
source: newtc/src/featurez/syntax/tests.rs
expression: approval_document
---
====text====
============
1+2+3
====tokens====
============
[
    IntegerLiteral[1],
    Plus[1],
    IntegerLiteral[1],
    Plus[1],
    IntegerLiteral[1],
    EndOfFile[0]
]
====events====
============
[
    BeginNode {
        kind: PrimitiveLiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: Some(
            3
        )
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    BeginNode {
        kind: BinaryExpr,
        is_forward_parent: true,
        forward_parent_offset: Some(
            6
        )
    },
    Token {
        kind: Plus,
        length: 1
    },
    BeginNode {
        kind: PrimitiveLiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: None
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    EndNode,
    BeginNode {
        kind: BinaryExpr,
        is_forward_parent: true,
        forward_parent_offset: None
    },
    Token {
        kind: Plus,
        length: 1
    },
    BeginNode {
        kind: PrimitiveLiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: None
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    EndNode
]
====tree====
============
┗ BinaryExpr
  ┠ BinaryExpr
  ┃ ┠ PrimitiveLiteralExpr
  ┃ ┃ ┗ IntegerLiteral '1'
  ┃ ┠ Plus '+'
  ┃ ┗ PrimitiveLiteralExpr
  ┃   ┗ IntegerLiteral '2'
  ┠ Plus '+'
  ┗ PrimitiveLiteralExpr
    ┗ IntegerLiteral '3'

