newtc/src/featurez/syntax/snapshots/tests__right_associativity.snap
---
created: "2019-07-25T15:09:13.232722Z"
creator: insta@0.8.1
source: newtc/src/featurez/syntax/tests.rs
expression: tree
---
┗ BinaryExpr
  ┠ LiteralExpr
  ┃ ┗ IntegerLiteral "1"
  ┠ Plus "+"
  ┗ BinaryExpr
    ┠ LiteralExpr
    ┃ ┗ IntegerLiteral "2"
    ┠ Star "*"
    ┗ LiteralExpr
      ┗ IntegerLiteral "3"

