newtc/src/featurez/syntax/snapshots/tests__right_associativity_is_deeply_nested.snap
---
created: "2019-07-22T16:03:52.963279Z"
creator: insta@0.8.1
source: newtc/src/featurez/syntax/tests.rs
expression: tree
---
┗ BinaryExpr
  ┠ LiteralExpr
  ┃ ┗ IntegerLiteral "1"
  ┠ Plus "+"
  ┗ BinaryExpr
    ┠ LiteralExpr
    ┃ ┗ IntegerLiteral "2"
    ┠ Star "*"
    ┗ LiteralExpr
      ┗ IntegerLiteral "3"

