newtc/src/featurez/syntax/snapshots/tests__unary_operators_are_parsed.snap
---
created: "2019-07-26T04:38:57.623771800Z"
creator: insta@0.8.1
source: newtc/src/featurez/syntax/tests.rs
expression: approval_document
---
-1*2+-3
===>
┗ BinaryExpr
  ┠ BinaryExpr
  ┃ ┠ LiteralExpr
  ┃ ┃ ┠ Minus "-"
  ┃ ┃ ┗ IntegerLiteral "1"
  ┃ ┠ Star "*"
  ┃ ┗ LiteralExpr
  ┃   ┗ IntegerLiteral "2"
  ┠ Plus "+"
  ┗ LiteralExpr
    ┠ Minus "-"
    ┗ IntegerLiteral "3"

